observ_user_create

--- a/app/views/home/feel.html.erb
+++ b/app/views/home/feel.html.erb
@@ -1,4 +1,4 @@
-
+<% provide(:title, "Feel") %>
 <head>
   
   <link href="https://fonts.googleapis.com/css2?family=Chewy&family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
