--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I'm here!</title>
+    <title><%= full_title(yield(:title)) %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -115,6 +115,33 @@
       </div>
     </header>
     <%= yield %>
-    
+    <script>
+
+      const targets = document.querySelectorAll('div.anime-section li');
+      const options = {
+        root: null,
+        threshold:1,
+      };
+
+      const observer = new IntersectionObserver(callback ,options);
+
+
+      function callback(entries, obs){
+        
+        entries.forEach(entry => {
+
+          if (!entry.isIntersecting){
+            return;
+          }
+
+        entry.target.classList.add('appear');
+        obs.unobserve(entry.target);
+      });
+      }
+
+      targets.forEach(target => {
+        observer.observe(target);
+      });
+    </script>
   </body>
 </html>
