--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -178,9 +178,9 @@
 <div class="my-page-section">
   <div class="profile">
     <div class="profile-img">
-      <img src="assets/catman.png">
+      <img src="/assets/catman.png">
     </div>
-    <p>shoichi kitahara</p>
+    <p><%= @user.name %></p>
     <p>フォロー：３ フォロワー：４</p>
     <div class="profile-coment">
       <p>自己紹介文です。自己紹介文です。自己紹介文です。自己紹介文です。自己紹介文です。自己紹介文です。自己紹介文です。</p>
