--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -187,6 +187,18 @@ button:hover {
   border: 1px solid black;
 }
 
+.container ul li input[type="password"] {
+  padding: 1px 8px;
+  font-size: 24px;
+  display: block;
+  margin: 0 auto;
+  width: 500px;
+  height: 50px;
+  border-radius: 10px;
+  margin-bottom: 16px;
+  border: 1px solid black;
+}
+
 .container ul li input[type="submit"] {
   font-size: 24px;
   display: block;
