--- a/app/views/home/feel.html.erb
+++ b/app/views/home/feel.html.erb
@@ -1,10 +1,5 @@
 <% provide(:title, "Feel") %>
-<head>
-  
-  <link href="https://fonts.googleapis.com/css2?family=Chewy&family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-  <%= javascript_include_tag "slider.js" %>
-</head>
+<%= javascript_include_tag "slider.js" %>
 <body>
   
 
@@ -13,12 +8,12 @@
     <h3>わいわいお喋り</h3>
     <div class="swiper" id="swipers">
       <ul class="swiper-wrapper swipes">
-        <li class="swiper-slide" alt=""><img src="img/catmovie.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/culture.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/dance.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/exacize.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/game.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/guitergirl.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/catmovie.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/culture.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/dance.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/exacize.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/game.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/guitergirl.png"></li>
       </ul>
     </div>
   </div>
@@ -26,12 +21,12 @@
     <h3>まったり話したい</h3>
     <div class="swiper" id="swipers2">
       <ul class="swiper-wrapper swipes">
-        <li class="swiper-slide" alt=""><img src="img/catmovie.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/culture.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/dance.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/exacize.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/game.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/guitergirl.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/catmovie.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/culture.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/dance.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/exacize.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/game.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/guitergirl.png"></li>
       </ul>
     </div>
   </div>
@@ -39,12 +34,12 @@
     <h3>学びを深めたい</h3>
     <div class="swiper" id="swipers3">
       <ul class="swiper-wrapper swipes">
-        <li class="swiper-slide" alt=""><img src="img/catmovie.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/culture.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/dance.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/exacize.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/game.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/guitergirl.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/catmovie.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/culture.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/dance.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/exacize.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/game.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/guitergirl.png"></li>
       </ul>
     </div>
   </div>
@@ -52,12 +47,12 @@
     <h3>実況系</h3>
     <div class="swiper" id="swipers4">
       <ul class="swiper-wrapper swipes">
-        <li class="swiper-slide" alt=""><img src="img/catmovie.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/culture.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/dance.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/exacize.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/game.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/guitergirl.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/catmovie.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/culture.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/dance.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/exacize.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/game.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/guitergirl.png"></li>
       </ul>
     </div>
   </div>
@@ -65,12 +60,12 @@
     <h3>イベント予定をたてませんか？</h3>
     <div class="swiper" id="swipers5">
       <ul class="swiper-wrapper swipes">
-        <li class="swiper-slide" alt=""><img src="img/catmovie.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/culture.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/dance.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/exacize.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/game.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/guitergirl.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/catmovie.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/culture.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/dance.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/exacize.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/game.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/guitergirl.png"></li>
       </ul>
     </div>
   </div>
@@ -78,12 +73,12 @@
     <h3>忍者モード</h3>
     <div class="swiper" id="swipers6">
       <ul class="swiper-wrapper swipes">
-        <li class="swiper-slide" alt=""><img src="img/catmovie.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/culture.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/dance.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/exacize.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/game.png"></li>
-        <li class="swiper-slide" alt=""><img src="img/guitergirl.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/catmovie.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/culture.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/dance.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/exacize.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/game.png"></li>
+        <li class="swiper-slide" alt=""><img src="/assets/guitergirl.png"></li>
       </ul>
     </div>
   </div>
